vagrant/k8s/sumologic.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: sumologic
spec:
  finalizers:
  - kubernetes
