vagrant/k8s/receiver-mock.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: receiver-mock
spec:
  finalizers:
  - kubernetes

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: receiver-mock
  namespace: receiver-mock
  labels:
    app: receiver-mock
spec:
  replicas: 1
  selector:
    matchLabels:
      app: receiver-mock
  template:
    metadata:
      labels:
        service: receiver-mock
        app: receiver-mock
    spec:
      containers:
        - ports:
            - containerPort: 3000
            - containerPort: 3001
          image: sumologic/kubernetes-tools
          name: receiver-mock
          args:
            - receiver-mock
            - --hostname=receiver-mock.receiver-mock
          resources: {}
          securityContext:
            capabilities:
              drop:
                - ALL
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              path: /metrics
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 20
      hostname: receiver-mock
      restartPolicy: Always
      imagePullSecrets:
        - name: regcred
status: {}

---
apiVersion: v1
kind: Service
metadata:
  name: receiver-mock
  namespace: receiver-mock
  labels:
    app: receiver-mock
spec:
  ports:
    # Receiver port
    - name: "3000"
      port: 3000
      targetPort: 3000
    # Debug receiver port (e.g. netcat)
    - name: "3001"
      port: 3001
      targetPort: 3001
  selector:
    service: receiver-mock
status:
  loadBalancer: {}
